--- a/scss/object/project/_top.scss
+++ b/scss/object/project/_top.scss
@@ -41,31 +41,51 @@
     font-size: 20px;
     line-height: calc(29/20);
     letter-spacing: 0.004em;
+    position: relative;
     @include v.tab{
         font-size: 30px;
         line-height: calc(44/30);
     }
 }
-.top-fv_descBlue{
-    color: v.$base-blue;    
-    position: relative;
+.top-fv_descLine{
+    position: absolute;
+    content: "";
+    border-bottom: 2px solid v.$base-blue;
+    left: 0;
+    bottom: -5px;
+    width: 60px;
+
+    @include v.tab{
+        width: 140px;
+    }
+
     &::before,
     &:after{
         position: absolute;
         content: "";
     }
     &::before{
-        border-bottom: 2px solid v.$base-blue;
-        bottom: -8px;
-        width: 140px 
-    }
-    &:after{
-        bottom: -14px;
-        right: -7px;
+        bottom: -10px;
+        right: -15px;
         border-bottom: 2px solid v.$base-blue;
         width: 20px;
         transform: rotate(45deg);
     }
+    &:after{
+        border-bottom: 2px solid v.$base-blue;
+        bottom: -2px;
+        left: 75px;
+        width: 115px;
+
+        @include v.tab{
+            left: 155px;
+            width: 330px;
+        }
+    }
+
+}
+.top-fv_descBlue{
+    color: v.$base-blue;
 }
 .top-fv_descSmall{
     color: v.$base-black;
@@ -76,15 +96,6 @@
     @include v.tab{
         font-size: 24px;
         line-height: calc(35/24);
-    }
-
-    &:after{
-        position: absolute;
-        content: "";
-        border-bottom: 2px solid v.$base-blue;
-        bottom: -11px;
-        left: 0;
-        width: 250px;
     }
 }
 .top-fv_descEng{
@@ -168,27 +179,12 @@
     color: v.$text-orange;
 }
 
-table , td, th {
-	border: 1px solid #595959;
-	border-collapse: collapse;
-}
-td, th {
-	padding: 3px;
-	width: 30px;
-	height: 25px;
-}
-th {
-	background: #f0e6cc;
-}
-.even {
-	background: #fbf8f0;
-}
-.odd {
-	background: #fefcf9;
-}
 
 .top-table{
-    margin: -60px auto 105px 0;
+    margin: -160px auto 50px 0;
+    @include v.tab{
+        margin: -60px auto 105px 0;
+    }
     td{
         vertical-align: middle;
     }
@@ -196,8 +192,9 @@ th {
 .top-tables{
     position: relative;
     z-index: 2;
+    margin: 0 auto;
 }
-.container-table_item{
+.top-table_item{
     text-align: center;
     color: v.$base-white;
     font-family: v.$YuGo;
@@ -207,31 +204,31 @@ th {
     border-bottom: 1px solid v.$base-white;
     width: 60px;
 
-    @include v.tab{
+    @include v.lt{
         width: 150px;
         font-size: 20px;
         line-height: calc(27/20);
     }
 }
-.container-table_itemLast{
+.top-table_itemLast{
     border-bottom: 1px solid v.$back-blue;
 }
-.container-table_fourth,
-.container-table_sixth{
+.top-table_fourth,
+.top-table_sixth{
     padding: 20px 0;
 }
-.container-table_fifth{
+.top-table_fifth{
     padding: 30px 0;
 }
-.container-table_white{
+.top-table_white{
     background-color: transparent;
     border: 1px solid transparent;
     border-right: 1px solid v.$back-blue;
 }
-.container-table_blue{
+.top-table_blue{
     background-color: v.$back-blue;
 }
-.container-table_head{
+.top-table_head{
     border: 1px solid v.$back-blue;
     padding: 15px 0 20px 0;
     background-color: v.$base-white;
@@ -240,10 +237,10 @@ th {
         width: 230px;
     }
 }
-.container-table_head1{
+.top-table_head1{
     position: relative;
 }
-.container-table_headNoImg{
+.top-table_headNoImg{
     position: absolute;
     top: -50%;
     left: 50%;
@@ -251,41 +248,41 @@ th {
     z-index: 5;
     width: 60px;
 
-    @include v.tab{
+    @include v.lt{
         top: -20%;
         left: 2%;
         width: 85px;
     }
 }
-.container-table_column1{
+.top-table_column1{
     width: 108px;
-    @include v.tab{
+    @include v.lt{
         width: 311px;
     }
 }
-.container-table_column2{
+.top-table_column2{
     width: 108px;
-    @include v.tab{
+    @include v.lt{
         width: 272px;
     }
 }
-.container-table_column3{
+.top-table_column3{
     width: 98px;
-    @include v.tab{
+    @include v.lt{
         width: 272px;
     }
 }
-.container-table_headImg{
+.top-table_headImg{
     width: 82px;
     margin: 0 auto;
-    @include v.tab{
+    @include v.lt{
         width: 195px;
         padding-right: 15px;
         margin-left: auto;    
     }
 
 }
-.container-table_line{
+.top-table_line{
     position: relative;
 
     &::after{
@@ -298,13 +295,13 @@ th {
         height: 616px;
         z-index: 2;
 
-        @include v.tab{
-            height: 745px;
+        @include v.lt{
+            height: 686px;
         }
     }
 }
 
-.container-table_headlink{
+.top-table_headlink{
     display: block;
     text-align: center;
     text-decoration: underline;
@@ -313,30 +310,31 @@ th {
     line-height: calc(18/12);
     font-size: 12px;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 20px;
         line-height: calc(30/20);
     }
 }
-.container-table_lblue{
+.top-table_lblue{
     background-color: v.$back-lblue;
 }
-.container-table_text{
+.top-table_text{
     text-align: center;
     color: v.$base-black;
     font-family: v.$YuGo;
     font-size: 11px;
     line-height: calc(16/11);
     border: 1px solid v.$back-blue;
+    background-color: v.$base-white;
     padding: 10px 0;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 20px;
         line-height: calc(30/20);
         padding: 20px 0;
     }
 }
-.container-table_circleText{
+.top-table_circleText{
     font-family: v.$YuGo;
     font-size: 14px;
     line-height: calc(19/14);
@@ -344,7 +342,7 @@ th {
     border: 1px solid v.$back-blue;
     position: relative;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 18px;
         line-height: calc(24/18);
     }
@@ -360,7 +358,7 @@ th {
         transform: translate(-50%, -50%);
     }
 }
-.container-table_reviews{
+.top-table_reviews{
     text-align: center;
     border: 1px solid v.$back-blue;
     img{
@@ -372,14 +370,15 @@ th {
         line-height: calc(20/15);
         color: v.$text-red;
         text-decoration: underline;
-        @include v.tab{
+
+        @include v.lt{
             display: inline-block;
             font-size: 20px;
             line-height: calc(27/20);
         }
     }
 }
-.container-table_link{
+.top-table_link{
     border: 1px solid v.$back-blue;
     
     a{
@@ -396,7 +395,7 @@ th {
         padding: 7px 0;
         box-shadow: 0px 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
 
-        @include v.tab{
+        @include v.lt{
             width: 210px;
             font-size: 21px;
             line-height: calc(28/21);
@@ -412,9 +411,22 @@ th {
     background-color: v.$back-lblue;
     padding: 50px 0;
 
-    @include v.tab{
+    @include v.lt{
         padding: 100px 0;
     }
+}
+.top-site_title{
+    font-size: 36px;
+    line-height: calc(54/36);
+
+    @include v.lt{
+        font-size: 39px;
+        line-height: calc(52/39);
+    }
+}
+.top-site_titleSpan{
+    font-size: 28px;
+    line-height: calc(54/28);
 }
 .top-site_official{
     text-align: center;
@@ -427,7 +439,7 @@ th {
     color: v.$base-blue;
     padding-bottom: 35px;
 
-    @include v.tab{
+    @include v.lt{
         padding-bottom: 35px;
     }
 }
@@ -436,7 +448,7 @@ th {
     line-height: calc(24/16);
     padding-bottom: 2px;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 18px;
         line-height: calc(26/18);
         padding-bottom: 7px;    
@@ -452,7 +464,14 @@ th {
 .top-site_item{
     background-color: v.$base-white;
     padding-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    width: 345px;
+    margin: 0 auto;
+
+    @include v.lt{
+        margin-bottom: 50px;
+        width: 100%;
+    }
 
     &:last-of-type{
         margin-bottom: 0;
@@ -463,44 +482,51 @@ th {
     gap: 10px;
     padding: 20px 15px 20px 15px;
 
-    @include v.tab{
+    @include v.lt{
         flex-direction: row;
         gap: 40px;
         padding: 25px 40px 20px 40px;
     }
 }
+.top-site_box{
+    margin: 0 auto;
+}
 .top-site_item--img{
     width: 160px;
     margin: 0 auto;
-    @include v.tab{
+    @include v.lt{
         width: 324px;
     }
-
 }
-.top-site_box{
-    
+.top-site_line{
+    text-align: center;
+    padding-bottom: 15px;
+
+    @include v.lt{
+        text-align: left;
+    }
 }
 .top-site_flex{
     background-color: v.$back-lblue;
     position: relative;
-    padding: 35px 0 8px 0;
 
-    @include v.tab{
+    @include v.lt{
         padding-top: 0;
+        gap: 30px;     
     }
 }
 .top-site_blue{
     color: v.$base-white;
     font-size: 16px;
     line-height: calc(32/16);
-    padding: 6px 18px 6px 15px;
+    padding: 4px 41px 7px 15px;
     background-color: v.$base-blue;
     clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%);
     text-align: center;
     position: absolute;
     top: -20px;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 18px;
         line-height: calc(26/18);
         padding: 30px 24px 30px 16px;
@@ -510,16 +536,28 @@ th {
 }
 .top-site_lblue{
     flex: 1;
+    padding: 25px 15px 6px 15px;
+
+    @include v.lt{
+        padding: 0;
+        padding-right: 27px;
+    }
 }
 .top-site_lblue--text{
     font-weight: 500;
-    line-height: calc(24/16);
+    line-height: calc(21/15);
     color: v.$base-blue;
     border-bottom: 3px dashed rgb(26, 122, 177, 0.4);
-    width: 85%;
-    margin-left: 20px;
-    padding-bottom: 5px;
+    font-size: 15px;
+    padding: 5px 0;
 
+    @include v.lt{
+        font-size: 16px;
+        line-height: calc(24/16)
+    }
+    &:first-of-type{
+        padding-top: 0;
+    }
     &:last-of-type{
         border: none;
         padding-bottom: 0;
@@ -533,7 +571,7 @@ th {
     padding-top: 10px;
 
     
-    @include v.tab{
+    @include v.lt{
         position: absolute;
         right: 45px;
         bottom: 40px;
@@ -552,7 +590,34 @@ th {
 
 
 .top-flow{
-    padding: 90px 0 100px 0;
+    padding: 50px 0 50px 0;
+
+    @include v.tab{
+        padding: 90px 0 100px 0;
+    }
+}
+.top-flow_label{
+    width: 245px;
+    @include v.tab{
+        width: 348px;
+    }
+}
+.top-flow_title{
+    font-size: 34px;
+    line-height: calc(42/34);
+
+    @include v.tab{
+        font-size: 38px;
+        line-height: calc(51/38);
+    }
+}
+.top-flow_titleSpan{
+    font-size: 28px;
+    line-height: calc(42/28);
+    @include v.tab{
+        font-size: 32px;
+        line-height: calc(43/32);
+    }
 }
 .top-flow_step{
     padding-bottom: 55px;
@@ -567,7 +632,7 @@ th {
     width: calc((100% / 2) - (168px / 2));
     height: 57px;
 
-    @include v.tab{
+    @include v.lt{
         // width: 245px;
         width: calc((100% / 3) - (245px / 3));
         height: 57px;
@@ -588,7 +653,7 @@ th {
     line-height: calc(80/11);
     color: v.$text-blue;
 
-    @include v.tab{
+    @include v.lt{
         line-height: calc(98/11);
     }
 }
@@ -600,7 +665,7 @@ th {
     opacity: 25%;
     margin-top: -40px;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 38px;
         line-height: calc(38/51);
     }
@@ -609,7 +674,7 @@ th {
     justify-content: center;
     flex: 1;
     gap: 10px;
-    @include v.tab{
+    @include v.lt{
         gap: 20px;
     }
 }
@@ -620,7 +685,7 @@ th {
     color: v.$base-black;
     text-align: center;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 18px;
         line-height: calc(24/18);
     }
@@ -655,7 +720,13 @@ th {
         padding-bottom: 0;
     }
 }
-
+.top-flow_detail--stepFlex{
+    width: 345px;
+    margin: 0 auto;
+    @include v.lt{
+        width: 100%;
+    }
+}
 .top-flow_detail--step{
     font-family: v.$YuGo;
     line-height: calc(98/16);
@@ -675,7 +746,7 @@ th {
     line-height: calc(32/24);
     color: v.$base-black;
 
-    @include v.tab{
+    @include v.lt{
         font-size: 28px;
         line-height: calc(37/28);
     }
@@ -684,9 +755,10 @@ th {
 
 }
 .top-flow_detailItemFlex{
-    gap: 30px;
+    gap: 35px;
 
-    @include v.tab{
+    @include v.lt{
+        gap: 30px;
         flex-direction: row;
     }
 }
@@ -712,7 +784,7 @@ th {
     clip-path: polygon(0 1%, 100% 0%, 100% 85%, 50% 100%, 0 85%);
     padding: 30px 15px 55px 15px;
 
-    @include v.tab{
+    @include v.lt{
         width: 500px;
         clip-path: polygon(0% 0%, 90% 0, 100% 50%, 90% 100%, 0% 100%);
         padding: 36px 20px 15px 30px;
@@ -744,7 +816,7 @@ th {
     max-width: 100%;
     position: relative;
 
-    @include v.tab{
+    @include v.lt{
         width: 480px;
     }
 }
@@ -763,7 +835,7 @@ th {
 .top-flow_detailItem--exampleLists{
     padding: 36px 15px 18px 15px;
 
-    @include v.tab{
+    @include v.lt{
         padding: 36px 30px 21px 40px;
     }
 }
@@ -793,7 +865,7 @@ th {
     line-height: calc(24/16);
     padding: 36px 15px 18px 15px;
 
-    @include v.tab{
+    @include v.lt{
         padding: 47px 30px 40px 40px;
     }
 }
@@ -804,6 +876,12 @@ th {
 }
 .top-flow_detailItemTextBox{
     text-align: center;
+    margin: 0 auto;
+    width: 345px;
+
+    @include v.lt{
+        width: 100%;
+    }
 }
 .top-flow_detailItemText{
     border: 1px solid v.$num-blue;
@@ -820,14 +898,37 @@ th {
 
 .top-faq{
     background-color: v.$back-lblue;
-    padding: 98px 0 130px 0;
+    padding: 49px 0 71px 0;
+
+    @include v.tab{
+        padding: 98px 0 130px 0;
+    }
+}
+.top-faq_title{
+    font-size: 34px;
+    line-height: calc(42/34);
+
+    @include v.tab{
+        font-size: 38px;
+        line-height: calc(50/38);
+    }
+}
+.top-faq_titleSpan{
+    font-size: 28px;
+    line-height: calc(42/28);
+
+    @include v.tab{
+        font-size: 32px;
+        line-height: calc(50/32);
+    }
 }
 .top-faq_item{
     width: 345px;
     margin: 0 auto 40px auto;
 
     @include v.tab{
-        width: 800px;
+        max-width: 800px;
+        width: 100%;
     }
 }
 .top-faq_qFlex--symbol{
@@ -881,29 +982,35 @@ th {
 }
 .top-faq_qFlex{
     background-color: v.$base-white;
-    padding: 12px 0 15px 30px;
+    padding: 9px 15px;
     gap: 20px;
     align-items: flex-start;
-}
-.top-faq_a{
-    font-size: 16px;
-    line-height: calc(26/16);
-    color: v.$text-orange;
 
     @include v.tab{
-        font-size: 24px;
-        line-height: calc(33/24);
+        padding: 12px 0 15px 30px;
     }
+}
+.top-faq_a{
+    font-size: 24px;
+    line-height: calc(32/24);
+    color: v.$text-orange;
 }
 .top-faq_aFlex{
     background-color: v.$back-lblue;
-    padding: 15px 0 0 30px;
-    gap: 20px;
+    padding: 6px 0 0 15px;
+    gap: 17px;
     align-items: flex-start;
+    display: none;
+
+    @include v.tab{
+        padding: 15px 0 0 30px;
+        gap: 20px;
+    }
 }
 .top-faq_ansText{
     font-weight: 500;
     line-height: calc(21/16);
+    flex: 1;
     a{
         color: v.$base-black;
         text-decoration: underline;
@@ -911,5 +1018,17 @@ th {
 }
 
 .top-column{
-    padding: 100px 0;
+    padding: 80px 0 98px 0;
+
+    @include v.tab{
+        padding: 100px 0;
+    }
+}
+.top-column_title{
+    font-size: 38px;
+    line-height: calc(51/38);
+    @include v.tab{
+        font-size: 28px;
+        line-height: calc(37/28);
+    }
 }
