--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -11,6 +11,7 @@ $text-title-black:#090F15;
 $text-blue:#2E83C1;
 $text-orange:#FF8955;
 $text-red:#FD0202;
+$text-white: #FEFEFE;
 
 $back-blue: #36B6FF;
 $back-lblue:#F0F9FC;
