--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,6 +538,14 @@ main {
 /*
  * object
  */
+.hover-opacity {
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.hover-opacity:hover {
+  opacity: 0.8;
+}
+
 @media (min-width: 768px) {
   .display-visible_sp {
     display: none;
@@ -602,12 +610,6 @@ main {
 .flex-reverse {
   -ms-flex-wrap: wrap-reverse;
       flex-wrap: wrap-reverse;
-}
-@media (min-width: 768px) {
-  .flex-reverse {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
 }
 .flex-container {
   display: -webkit-box;
@@ -846,7 +848,7 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     text-align: left;
-    padding: 40px 0 65px 0;
+    padding: 40px 0 125px 0;
     position: relative;
   }
 }
@@ -964,8 +966,8 @@ main {
   letter-spacing: 0.05em;
   display: inline-block;
   color: #FF8955;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, transparent), color-stop(0, rgba(255, 137, 85, 0.3)));
-  background: linear-gradient(transparent 70%, rgba(255, 137, 85, 0.3) 0);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, transparent), color-stop(0, rgba(255, 137, 85, 0.3)));
+  background: linear-gradient(transparent 80%, rgba(255, 137, 85, 0.3) 0);
   padding-top: 20px;
 }
 @media (min-width: 768px) {
@@ -993,6 +995,7 @@ main {
 @media (min-width: 768px) {
   .top-fv_titleFlex {
     gap: 20px;
+    margin-bottom: -50px;
   }
 }
 
@@ -1046,7 +1049,7 @@ main {
 }
 @media (min-width: 768px) {
   .top-table {
-    margin: -60px auto 105px 0;
+    margin: -65px auto 105px 0;
   }
 }
 .top-table td {
@@ -1125,7 +1128,7 @@ main {
 }
 @media (min-width: 1024px) {
   .top-table_headNoImg {
-    top: -20%;
+    top: -35%;
     left: 17%;
     width: 85px;
   }
@@ -1164,7 +1167,7 @@ main {
 }
 @media (min-width: 1024px) {
   .top-table_headImg {
-    width: 195px;
+    width: 210px;
     padding-right: 15px;
     margin: 0 0 0 auto;
   }
@@ -1185,7 +1188,7 @@ main {
 }
 @media (min-width: 1024px) {
   .top-table_line::after {
-    height: 686px;
+    height: 665px;
   }
 }
 
@@ -1194,14 +1197,17 @@ main {
   text-align: center;
   text-decoration: underline;
   color: #000000;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
   font-weight: 500;
-  line-height: 1.5;
   font-size: 12px;
+  line-height: 1.5;
+  position: relative;
+  z-index: 3;
 }
 @media (min-width: 1024px) {
   .top-table_headlink {
-    font-size: 20px;
-    line-height: 1.5;
+    font-size: 16px;
+    line-height: 1.3125;
   }
 }
 
@@ -1260,7 +1266,7 @@ main {
 .top-table_reviews img {
   width: 80px;
 }
-.top-table_reviews a {
+.top-table_reviews span {
   display: block;
   font-size: 15px;
   line-height: 1.3333333333;
@@ -1268,11 +1274,18 @@ main {
   text-decoration: underline;
 }
 @media (min-width: 1024px) {
-  .top-table_reviews a {
+  .top-table_reviews span {
     display: inline-block;
     font-size: 20px;
     line-height: 1.35;
   }
+}
+
+.top-table_reviewsFlex {
+  gap: 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .top-table_link {
@@ -1290,8 +1303,10 @@ main {
   font-size: 14px;
   line-height: 1.2857142857;
   padding: 7px 0;
-  -webkit-box-shadow: 0px 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
+  position: relative;
+  z-index: 3;
 }
 @media (min-width: 1024px) {
   .top-table_link a {
@@ -1561,25 +1576,32 @@ main {
 }
 
 .top-flow_step {
+  max-width: 800px;
+  margin: 0 auto;
   padding-bottom: 55px;
 }
 
 .top-flow_step--flex {
-  gap: 20px 30px;
+  gap: 10px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media (min-width: 1024px) {
+  .top-flow_step--flex {
+    gap: 20px 30px;
+  }
+}
 
 .top-flow_item {
-  width: calc(50% - 84px);
+  width: calc(50% - 5px);
   height: 57px;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .top-flow_item {
-    width: calc(33.3333333333% - 81.6666666667px);
+    width: calc(33.3333333333% - 30px);
     height: 57px;
   }
 }
@@ -1589,8 +1611,9 @@ main {
       -ms-flex-align: end;
           align-items: flex-end;
   border-bottom: 1px solid #3284C1;
-  height: 57px;
   padding-bottom: 10px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .top-flow_item--nums {
@@ -1600,22 +1623,16 @@ main {
 .top-flow_item--step {
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
   font-size: 11px;
-  line-height: 7.2727272727;
+  line-height: 1;
   color: #2E83C1;
-}
-@media (min-width: 1024px) {
-  .top-flow_item--step {
-    line-height: 8.9090909091;
-  }
 }
 
 .top-flow_item--num {
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
   font-size: 32px;
-  line-height: 1.34375;
+  line-height: 0.7;
   color: #2E83C1;
   opacity: 25%;
-  margin-top: -40px;
 }
 @media (min-width: 1024px) {
   .top-flow_item--num {
@@ -1638,6 +1655,9 @@ main {
     gap: 20px;
   }
 }
+.top-flow_item--textFlex img {
+  width: 18px;
+}
 
 .top-flow_item--text {
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
@@ -1654,7 +1674,7 @@ main {
 }
 
 .top-flow_circle {
-  display: inline-block;
+  display: block;
   width: 18px;
   height: 18px;
   border: 1px solid #000000;
@@ -1993,9 +2013,9 @@ main {
   background-color: #FFFFFF;
   padding: 9px 15px;
   gap: 20px;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media (min-width: 768px) {
   .top-faq_qFlex {
@@ -2009,6 +2029,10 @@ main {
   color: #FF8955;
 }
 
+.top-faq_ans {
+  display: none;
+}
+
 .top-faq_aFlex {
   background-color: #F0F9FC;
   padding: 6px 0 0 15px;
@@ -2016,7 +2040,6 @@ main {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  display: none;
 }
 @media (min-width: 768px) {
   .top-faq_aFlex {
@@ -2054,5 +2077,125 @@ main {
   .top-column_title {
     font-size: 28px;
     line-height: 1.3214285714;
+  }
+}
+
+.top-column_flex {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 50px 10px;
+}
+@media (min-width: 768px) {
+  .top-column_flex {
+    gap: 37px 33px;
+  }
+}
+
+.top-column_list {
+  width: calc(50% - 5px);
+}
+@media (min-width: 768px) {
+  .top-column_list {
+    width: calc(33.3333333333% - 22px);
+  }
+}
+.top-column_list img {
+  display: block;
+  margin: 0 auto;
+}
+
+.top-column_link {
+  display: block;
+}
+
+.top-column_listDesc {
+  padding-top: 18px;
+}
+
+.top-column_reverse {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media (min-width: 768px) {
+  .top-column_reverse {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+.top-column_listTitle {
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  color: #000000;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.7142857143;
+}
+@media (min-width: 768px) {
+  .top-column_listTitle {
+    font-size: 18px;
+    line-height: 1.5;
+    padding-bottom: 45px;
+  }
+}
+
+.top-column_listFlex {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: auto;
+}
+@media (min-width: 768px) {
+  .top-column_listFlex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.top-column_category {
+  display: block;
+  background-color: #1A7AB1;
+  color: #FEFEFE;
+  margin-right: auto;
+  padding: 2px 24px 2px 14px;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  font-size: 12px;
+  line-height: 1.3333333333;
+  margin-bottom: 5px;
+}
+@media (min-width: 768px) {
+  .top-column_category {
+    padding: 5px 32px 5px 18px;
+    font-size: 15px;
+    line-height: 1.3333333333;
+    margin-bottom: 0;
+  }
+}
+
+.top-column_listDate {
+  display: block;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  font-size: 14px;
+  line-height: 1.3571428571;
+  margin-right: auto;
+  margin-bottom: 5px;
+}
+@media (min-width: 768px) {
+  .top-column_listDate {
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-left: auto;
   }
 }/*# sourceMappingURL=style.css.map */
