--- a/scss/object/project/_top.scss
+++ b/scss/object/project/_top.scss
@@ -13,7 +13,7 @@
         background-repeat: no-repeat;
         background-position: center;
         text-align: left;
-        padding: 40px 0 65px 0;
+        padding: 40px 0 125px 0;
         position: relative;
     }
 
@@ -115,7 +115,7 @@
     letter-spacing: 0.05em;
     display: inline-block;
     color: v.$text-orange;
-    background: linear-gradient(transparent 70%, rgba(255, 137, 85, 0.3) 0);
+    background: linear-gradient(transparent 80%, rgba(255, 137, 85, 0.3) 0);
     padding-top: 20px;
 
     @include v.tab{
@@ -137,6 +137,7 @@
     gap: 7px;
     @include v.tab{
         gap: 20px;
+        margin-bottom: -50px;
     }
 
 }
@@ -183,7 +184,7 @@
 .top-table{
     margin: -160px auto 50px 0;
     @include v.tab{
-        margin: -60px auto 105px 0;
+        margin: -65px auto 105px 0;
     }
     td{
         vertical-align: middle;
@@ -249,7 +250,7 @@
     width: 60px;
 
     @include v.lt{
-        top: -20%;
+        top: -35%;
         left: 17%;
         width: 85px;
     }
@@ -276,7 +277,7 @@
     width: 82px;
     margin: 0 auto;
     @include v.lt{
-        width: 195px;
+        width: 210px;
         padding-right: 15px;
         margin: 0 0 0 auto;
     }
@@ -296,7 +297,7 @@
         z-index: 2;
 
         @include v.lt{
-            height: 686px;
+            height: 665px;
         }
     }
 }
@@ -306,13 +307,16 @@
     text-align: center;
     text-decoration: underline;
     color: v.$base-black;
+    font-family: v.$YuGo;
     font-weight: 500;
-    line-height: calc(18/12);
     font-size: 12px;
+    line-height: calc(18/12);
+    position: relative;
+    z-index: 3;
 
     @include v.lt{
-        font-size: 20px;
-        line-height: calc(30/20);
+        font-size: 16px;
+        line-height: calc(21/16);
     }
 }
 .top-table_lblue{
@@ -364,7 +368,7 @@
     img{
         width: 80px;
     }
-    a{
+    span{
         display: block;
         font-size: 15px;
         line-height: calc(20/15);
@@ -377,6 +381,10 @@
             line-height: calc(27/20);
         }
     }
+}
+.top-table_reviewsFlex{
+    gap: 15px;
+    justify-content: center;
 }
 .top-table_link{
     border: 1px solid v.$back-blue;
@@ -393,7 +401,9 @@
         font-size: 14px;
         line-height: calc(18/14);
         padding: 7px 0;
-        box-shadow: 0px 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
+        box-shadow: 3px 6px 6px 0px rgba(0, 0, 0, 0.16);
+        position: relative;
+        z-index: 3;
 
         @include v.lt{
             width: 210px;
@@ -620,29 +630,33 @@
     }
 }
 .top-flow_step{
+    max-width: 800px;
+    margin: 0 auto;
     padding-bottom: 55px;
 }
 .top-flow_step--flex{
-    gap: 20px 30px;
+    gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
-}
-.top-flow_item{
-    // width: 168px;
-    width: calc((100% / 2) - (168px / 2));
-    height: 57px;
 
     @include v.lt{
-        // width: 245px;
-        width: calc((100% / 3) - (245px / 3));
+        gap: 20px 30px;        
+    }
+}
+.top-flow_item{
+    width: calc((100% / 2) - 5px);
+    height: 57px;
+
+    @include v.tab{
+        width: calc((100% / 3) - 30px);
         height: 57px;
     }
 }
 .top-flow_item--flex{
     align-items: flex-end;
     border-bottom: 1px solid v.$num-blue;
-    height: 57px;
     padding-bottom: 10px;
+    align-self: center;
 }
 .top-flow_item--nums{
     text-align: center;
@@ -650,20 +664,15 @@
 .top-flow_item--step{
     font-family: v.$YuGo;
     font-size: 11px;
-    line-height: calc(80/11);
+    line-height: 1;
     color: v.$text-blue;
-
-    @include v.lt{
-        line-height: calc(98/11);
-    }
 }
 .top-flow_item--num{
     font-family: v.$YuGo;
     font-size: 32px;
-    line-height: calc(43/32);
+    line-height: 0.7;
     color: v.$text-blue;
     opacity: 25%;
-    margin-top: -40px;
 
     @include v.lt{
         font-size: 38px;
@@ -676,6 +685,10 @@
     gap: 10px;
     @include v.lt{
         gap: 20px;
+    }
+
+    img{
+        width: 18px;
     }
 }
 .top-flow_item--text{
@@ -691,7 +704,7 @@
     }
 }
 .top-flow_circle{
-    display: inline-block;
+    display: block;
     width: 18px;
     height: 18px;
     border: 1px solid v.$base-black;
@@ -750,9 +763,6 @@
         font-size: 28px;
         line-height: calc(37/28);
     }
-}
-.top-flow_detail--blue{
-
 }
 .top-flow_detailItemFlex{
     gap: 35px;
@@ -984,7 +994,7 @@
     background-color: v.$base-white;
     padding: 9px 15px;
     gap: 20px;
-    align-items: flex-start;
+    align-items: center;
 
     @include v.tab{
         padding: 12px 0 15px 30px;
@@ -995,12 +1005,14 @@
     line-height: calc(32/24);
     color: v.$text-orange;
 }
+.top-faq_ans{
+    display: none;
+}
 .top-faq_aFlex{
     background-color: v.$back-lblue;
     padding: 6px 0 0 15px;
     gap: 17px;
     align-items: flex-start;
-    display: none;
 
     @include v.tab{
         padding: 15px 0 0 30px;
@@ -1030,5 +1042,94 @@
     @include v.tab{
         font-size: 28px;
         line-height: calc(37/28);
+    }
+}
+.top-column_flex{
+    flex-wrap: wrap;
+    gap: 50px 10px;
+
+    @include v.tab{
+        gap: 37px 33px;
+    }
+}
+.top-column_list{
+    width: calc((100% / 2) - (10px / 2));
+    
+    @include v.tab{
+        width: calc((100% / 3) - (33px * 2 / 3));
+    }
+    img{
+        display: block;
+        margin: 0 auto;
+    }
+}
+.top-column_link{
+    display: block;
+}
+.top-column_listDesc{
+    padding-top: 18px;
+}
+.top-column_reverse{
+    // justify-content: space-between;
+    flex-direction: column;
+    @include v.tab{
+        flex-direction: column-reverse;
+    }
+
+
+}
+.top-column_listTitle{
+    font-family: v.$YuGo;
+    color: v.$base-black;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: calc(24/14);
+    
+    @include v.tab{
+        font-size: 18px;
+        line-height: calc(27/18);
+        padding-bottom: 45px;
+    }
+}
+.top-column_listFlex{
+    flex-direction: column;
+    margin-right: auto;
+
+    @include v.tab{
+        flex-direction: row;
+        display: flex;
+        align-items: center;
+    }
+}
+.top-column_category{
+    display: block;
+    background-color: v.$base-blue;
+    color: v.$text-white;
+    margin-right: auto;
+    padding: 2px 24px 2px 14px;
+    font-family: v.$YuGo;
+    font-size: 12px;
+    line-height: calc(16/12);
+    margin-bottom: 5px;
+
+    @include v.tab{
+        padding: 5px 32px 5px 18px;
+        font-size: 15px;
+        line-height: calc(20/15);
+        margin-bottom: 0;
+    }
+}
+.top-column_listDate{
+    display: block;
+    font-family: v.$YuGo;
+    font-size: 14px;
+    line-height: calc(19/14);
+    margin-right: auto;
+    margin-bottom: 5px;
+
+    @include v.tab{
+        margin-bottom: 0;
+        margin-right: 0;
+        margin-left: auto;
     }
 }
