--- a/scss/object/project/_top.scss
+++ b/scss/object/project/_top.scss
@@ -1099,6 +1099,7 @@
         flex-direction: row;
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 }
 .top-column_category{
