--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2161,6 +2161,9 @@ main {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
