--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -19,6 +19,7 @@ $back-lblue:#F0F9FC;
 $num-blue:#3284C1;
 
 $border-blue: #4280BD;
+$border-gray: #DDDDDD;
 
 //フォント
 $Noto_Sans_Jp : 'Noto Sans JP',
