--- a/scss/object/project/_top.scss
+++ b/scss/object/project/_top.scss
@@ -4,7 +4,7 @@
     background-image: url(/wp-content/themes/nicojob/assets/img/top/fv_spimg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left top;
     padding: 20px 0 235px 0;
 
     @include v.tab{
@@ -219,7 +219,10 @@
     padding: 20px 0;
 }
 .top-table_fifth{
-    padding: 30px 0;
+    padding: 10px 0;
+    @include v.lt{
+        padding: 30px 0;
+    }
 }
 .top-table_white{
     background-color: transparent;
@@ -293,7 +296,7 @@
         top: -1px;
         left: -1px;
         width: 101%;
-        height: 616px;
+        height: 580px;
         z-index: 2;
 
         @include v.lt{
@@ -382,9 +385,14 @@
         }
     }
 }
-.top-table_reviewsFlex{
-    gap: 15px;
+.top-table_reviewsFlex{    
     justify-content: center;
+    flex-direction: column;
+
+    @include v.lt{
+        gap: 15px;
+        flex-direction: row;
+    }
 }
 .top-table_link{
     border: 1px solid v.$back-blue;
@@ -453,6 +461,11 @@
         padding-bottom: 35px;
     }
 }
+.top-site_lists2{
+    @include v.lt{
+        padding-bottom: 16px;
+    }
+}
 .top-site_list{
     font-size: 16px;
     line-height: calc(24/16);
@@ -474,9 +487,8 @@
 .top-site_item{
     background-color: v.$base-white;
     padding-top: 20px;
-    margin-bottom: 40px;
     width: 345px;
-    margin: 0 auto;
+    margin: 0 auto 40px auto;
 
     @include v.lt{
         margin-bottom: 50px;
@@ -488,7 +500,8 @@
     }
 }
 .top-site_item--flex{
-    align-items: flex-start;
+    // align-items: flex-start;
+    align-items: center;
     gap: 10px;
     padding: 20px 15px 20px 15px;
 
@@ -501,11 +514,42 @@
 .top-site_box{
     margin: 0 auto;
 }
+.top-site_itemBox{
+    border: 1px solid v.$border-gray;
+}
+.top-site_itemBox1{
+    padding: 80px 20px 80px 5px;
+}
+.top-site_itemBox2{
+    padding: 105px 12.5px 105px 12.5px;
+}
+.top-site_itemBox3{
+    padding: 105px 12.5px 105px 12.5px;
+}
+.top-site_itemBox4{
+    padding: 105px 32px 105px 32px;
+}
+.top-site_itemBox5{
+    padding: 50px 81px;
+}
 .top-site_item--img{
-    width: 160px;
+    // width: 160px;
     margin: 0 auto;
     @include v.lt{
-        width: 324px;
+        // width: 324px;
+        width: 300px;
+    }
+}
+.top-site_item--img1{
+
+    @include v.lt{
+        width: 300px;
+    }
+}
+.top-site_item--img5{
+
+    @include v.lt{
+        width: 163px;
     }
 }
 .top-site_line{
@@ -522,13 +566,13 @@
 
     @include v.lt{
         padding-top: 0;
-        gap: 30px;     
+        gap: 20px;     
     }
 }
 .top-site_blue{
     color: v.$base-white;
     font-size: 16px;
-    line-height: calc(32/16);
+    // line-height: calc(32/16);
     padding: 4px 41px 7px 15px;
     background-color: v.$base-blue;
     clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%);
@@ -550,7 +594,7 @@
 
     @include v.lt{
         padding: 0;
-        padding-right: 27px;
+        padding-right: 15px;
     }
 }
 .top-site_lblue--text{
@@ -800,6 +844,11 @@
         padding: 36px 20px 15px 30px;
     }
 }
+.top-flow_detail--clip3{
+    @include v.lt{
+        padding: 36px 20px 40px 30px;
+    }
+}
 .top-flow_detail--list{
     gap: 20px;
 }
@@ -1008,6 +1057,9 @@
 .top-faq_ans{
     display: none;
 }
+.top-faq_ansOpen{
+    display: block;
+}
 .top-faq_aFlex{
     background-color: v.$back-lblue;
     padding: 6px 0 0 15px;
@@ -1037,16 +1089,16 @@
     }
 }
 .top-column_title{
-    font-size: 38px;
-    line-height: calc(51/38);
+    font-size: 28px;
+    line-height: calc(37/28);
     @include v.tab{
-        font-size: 28px;
-        line-height: calc(37/28);
+        font-size: 38px;
+        line-height: calc(51/38);
     }
 }
 .top-column_flex{
     flex-wrap: wrap;
-    gap: 50px 10px;
+    gap: 30px 10px;
 
     @include v.tab{
         gap: 37px 33px;
@@ -1059,9 +1111,19 @@
         width: calc((100% / 3) - (33px * 2 / 3));
     }
     img{
-        display: block;
-        margin: 0 auto;
+
     }
+}
+.top-column_eyecatch{
+    display: block;
+    margin: 0 auto;
+    // height: auto;
+    aspect-ratio: (167 / 98);
+    object-fit: cover;
+}
+.wp-post-image{
+    aspect-ratio: (167 / 98);
+    object-fit: cover;
 }
 .top-column_link{
     display: block;
@@ -1088,12 +1150,18 @@
     @include v.tab{
         font-size: 18px;
         line-height: calc(27/18);
-        padding-bottom: 45px;
+        padding-bottom: 30px;
     }
 }
 .top-column_listFlex{
     flex-direction: column;
     margin-right: auto;
+    width: auto;
+
+    @include v.tab{
+        width: 100%;
+    }
+
 
     @include v.tab{
         flex-direction: row;
@@ -1107,14 +1175,14 @@
     background-color: v.$base-blue;
     color: v.$text-white;
     margin-right: auto;
-    padding: 2px 24px 2px 14px;
+    padding: 2px 14px 2px 14px;
     font-family: v.$YuGo;
     font-size: 12px;
     line-height: calc(16/12);
     margin-bottom: 5px;
 
     @include v.tab{
-        padding: 5px 32px 5px 18px;
+        padding: 5px 18px 5px 18px;
         font-size: 15px;
         line-height: calc(20/15);
         margin-bottom: 0;
